bugfix: api added time to chart feat: added dynamic background to hum temp panels TODO: dark mode and first page make white

--- a/src/Styles/Chart/chart.css
+++ b/src/Styles/Chart/chart.css
@@ -71,3 +71,9 @@
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
+.date-text {
+  font-family: Vazirmatn, sans-serif;
+  font-weight: bold;
+  color: #353535;
+}
