--- a/src/Styles/WindIcon/wind-icon.css
+++ b/src/Styles/WindIcon/wind-icon.css
@@ -1,6 +1,6 @@
 .wind-icon {
-  height: 40px;
-  width: 50px;
+  height: 30px;
+  width: 40px;
   color: #f1f1f1;
   position: absolute;
   top: 0px;
